# OpenCV

./: CMakeLists.txt  Dockerfile  MEMO.md  README.md  docker_build.sh  docker_run.sh
img/: prac1.pgm  prac2.pgm  prac3.pgm  test.pgm  test2.pgm  test3.ppm
src/: contrast_attenuation.cpp  contrast_enhancement.cpp  gamma_conversion.cpp  get_pixel_address.cpp  homography_transform.cpp  hough_trans_extract_shape.cpp  hough_transform.cpp  img_get.cpp  img_hist.cpp  img_hist_equalize.cpp  img_read.cpp  intensity_adjustment.cpp  main.cpp  negaposi_conversion.cpp  plane_to_homography.cpp  prac4_2.cpp  ransac_plane.cpp  resolution_get.cpp
